tests/sumo/spec/departure/errors/edge_disallowed/errors.sumo
Error: Vehicle '1' is not allowed to depart on any lane of its first edge.
Quitting (on error).
